ChangeLog

Upcoming version
[FEATURE]  Index custom file references in page indexer. Thanks to Patrick Crausaz. https://github.com/tpwd/ke_search/pull/119
[FEATURE]  Index custom fields in tt_content. https://github.com/tpwd/ke_search/issues/102
[TASK]     Remove unnecessary removing of replacement character, see https://github.com/tpwd/ke_search/commit/af9f166f241728916a726ae453a676997a0f3b7d#r76324249
[BUGFIX]   Give dependencies when instantiating Db object and activate autoconfigure and auto-wiring for Db. https://github.com/tpwd/ke_search/issues/78
[BUGFIX]   Fix link to non-FAL-files in result list. https://github.com/tpwd/ke_search/issues/118
[TASK]     Add MatchColumnsEvent, remove the dependency in the Db class, inject the EventDispatcher

Version 4.4.5, June 2022
[BUGFIX]  Remove unicode replacement character in PDF indexing. Thanks to Kamel Ben Yedder. https://github.com/tpwd/ke_search/pull/114
[BUGFIX]  Fix regression from version 4.4.2 which caused the search result to be empty when the search box is on a different page. https://github.com/tpwd/ke_search/issues/113

Version 4.4.4, June 2022
[TASK]    Go back to fetch() from fetchAssociative() for backwards compatibility

Version 4.4.3, June 2022
[BUGFIX]  Fix undefined array key issue
[BUGFIX]  Fix regression which threw an error when showing file results in TYPO3 10

Version 4.4.2, June 2022
[BUGFIX]  Use localized search result images. https://github.com/tpwd/ke_search/issues/77
[BUGFIX]  Fix typo in tt_content indexer file indexing. Thanks to Nimmermaer. https://github.com/tpwd/ke_search/pull/97
[BUGFIX]  Fix fetching of the FlexForm settings in the list view plugin
[TASK]    Move modifyFlexFormData before calling getFilterPreselect to make it possible to modify the preselected filters
[TASK]    Add TypoScript configuration option "additionalAllowedPiVars" which allows the usage of custom piVars, see Configuration/TypoScript/setup.typoscript